tests/negative/test_expr_ind_bad_type.orb
fnc main() () {
    let (x:i32 100);
    [] x 0;
};